--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1359,3 +1359,30 @@ section,
 .copy-btn:focus {
   outline: none;
 }
+
+.main-image {
+  width: 250px;
+  height: 250px;
+  border: 1px solid black;
+}
+
+.thumbnails {
+  display: grid;
+  grid-template-columns: repeat(5, 50px);
+  grid-template-rows: repeat(5, 50px);
+  gap: 10px;
+  width: 300px;
+}
+
+.thumbnail {
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  object-fit: cover;
+}
+
+button {
+  margin-top: 20px;
+  margin-left: 10px;
+}
